--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,9 @@
    Author's custom styles
    ========================================================================== */
 
-
-
-
+body {
+    font-family: 'Roboto', sans-serif;
+}
 
 
 
